# kractor

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  changelog.md  dist-workspace.toml
.github/workflows/: check.yaml  release.yaml  test.yaml
benchmarks/: benchmarks.md
src/: cli.rs  extract.rs  kractor.rs  main.rs  models.rs
src/parsers/: fastx.rs  kraken.rs  mod.rs
