[package]
name = "kraactor"
version = "0.3.0"
edition = "2021"
authors = ["Samuel Sims"]
description = "Extract reads from a FASTQ file based on taxonomic classification via Kraken2."
readme = "README.md"
repository = "https://github.com/Sam-Sims/kraactor"
license = "MIT"
keywords = ["kraken", "bioinformatics", "taxonomy", "fastq"]
categories = ["command-line-utilities", "science"]
documentation = "https://docs.rs/crate/kraactor/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.3.19", features = ["derive"] }
crossbeam = "0.8.2"
env_logger = "0.10.0"
log = "0.4.20"
niffler = { version = "2.5.0", default-features = false, features = ["gz", "bz2", "gz_cloudflare_zlib"] }
noodles = { version = "0.51.0", features = ["fastq", "fasta"] }


